Quick fix Tour page spacing.

--- a/website/source/assets/stylesheets/_config.css.scss
+++ b/website/source/assets/stylesheets/_config.css.scss
@@ -51,7 +51,7 @@ $font-h            : 4rem;
 
 $font-xl           : 3.2rem;
 $font-l            : 2.5rem;
-$font-m            : 1.5rem;
+$font-m            : 1.4rem;
 $font-s            : 1.3rem;
 $font-xs           : 1.1rem;
 
