--- a/website/source/assets/stylesheets/combos/_tour.scss
+++ b/website/source/assets/stylesheets/combos/_tour.scss
@@ -72,7 +72,7 @@
   }
   .tour-item-text {
     display: block;
-    font-size: $font-s;
+    font-size: $font-m;
     line-height: $lheight-m;
     &:first-child {
       margin-top: 0;
